    - Dependencies between targets and external build tasks.

  * Structure Pane revamped: now is based on ".cmt" files.

  * Inferred Types: now are based on ".cmt" files.

  * Find Definition/References:
      - now based on ".cmt" files;
      - search results are displayed in a new widget;
      - new ability to search variant and exception constructors and
        record labels.

  * Completion: more accurate completion of local definitions.

  * More options in Preferences dialog.

  * Various other fixes.



2012-07-27 Release 1.7.5
------------------------

  * Automatically highlight all occurrences of the currently selected word.
  * Changed project file extension from ".xml" to ".project".
  * Fix infinite loop in "Find in Path" in presence of symbolic links.
  * Fix: quick file chooser doesn't load files when project is opened
    from dialog.
  * Fix scroll issue with bookmarks and hyperlinks from "Find in Path" results.
  * Other minor bug fixes.


2012-07-13 Release 1.7.4
------------------------

  * Minor bug fixes.


2012-07-12 Release 1.7.3
------------------------

  * Upgrade to ocaml-3.12.1.
  * Project file splitted into two files, so as to keep separate local data.
  * Bookmarks are now local to the project.
  * Added "Open with Notepad" to "External tools" (Windows only).
  * Removed backward compatibility with old projects v.1.1.
  * Fix dot leaders rendering on GTK-2.24.
  * Fix minor usability issues in "Project properties" dialog.
  * Fix crash on Windows7.


2012-05-03  Release 1.7.2
-------------------------

  * Fix #1141, #1144, #1145.


2012-04-23  Release 1.7.1
-------------------------

  * Improved responsiveness of "Build configuration" window.
  * More compact XML project file (the new format is not compatible with
    previous versions of OCamlEditor).
  * Ability to enable/disable command line arguments and environment variables
    from "Runtime configurations" and "External build tasks".