@@ -60,17 +60,17 @@ let find_external_definition ~project ~ext_ref =
                           when def.def_name = ext_name -> raise (Found def_ident)
                       | Def_module def
                           when def.def_name = longid -> raise (Found def_ident)
-                      | Int_ref _ | Ext_ref | Def _ | Def_constr _ | Def_module _ -> ()
+                      | Int_ref _ | Ext_ref | Open _ | Def _ | Def_constr _ | Def_module _ -> ()
               done;
               (* If ident is not found in "locations", return an ident corresponding to the file *)
-              Some (Project_file {
+              Project_file {
                 ident_fname  = filename;
                 ident_kind   = Def {def_name=ext_ref.ident_loc.txt; def_loc=none; def_scope=none};
                 ident_loc    = Location.mkloc ext_ref.ident_loc.txt (in_file filename);
-              })
-            with Found def_ident -> Some (Project_def def_ident);
+              }
+            with Found def_ident -> Project_def def_ident;
           end;
-        with Not_found (* Misc.find_in_path_uncap *) -> Some Library_def
+        with Not_found (* Misc.find_in_path_uncap *) -> Library_def
       end;
     | _ -> assert false
 ;;
@@ -93,13 +93,13 @@ let find_project_external_references =
       | Def d when d.def_scope.loc_end.pos_cnum = -1 -> find_project_external_references' project def
       | Def_module _ -> find_project_external_references' project def
       | Def_constr _ -> find_project_external_references' project def
-      | Int_ref _ | Ext_ref | Def _ -> []
+      | Int_ref _ | Ext_ref | Open _ | Def _ -> []
 ;;
 
 (** find_external_references *)
 let find_external_references ~project ~ext_ref:{ident_kind; ident_loc; _} =
   match ident_kind with
-    | Ext_ref ->
+    | Ext_ref | Open _ ->
       let lid = Longident.flatten (Longident.parse ident_loc.txt) in
       scan_project_files ~project begin fun acc filename entry ->
         match lid with
@@ -123,7 +123,7 @@ let find_definition_and_references' ~project ~entry ~ident =
       let int_refs = Hashtbl.find_all entry.int_refs ident.ident_loc.loc in
       let mod_refs =
         find_external_references ~project
-          ~ext_ref:{ident_kind=Ext_ref; ident_loc=mkloc def.def_name def.def_loc; ident_fname=""}
+          ~ext_ref:{ident_kind=Open none; ident_loc=mkloc def.def_name def.def_loc; ident_fname=""}
       in
       {bai_def = Some ident; bai_refs = int_refs @ mod_refs}
     | Int_ref def -> (* Cursor offset is on an Int_ref *)
@@ -131,22 +131,26 @@ let find_definition_and_references' ~project ~entry ~ident =
       let int_refs = Hashtbl.find_all entry.int_refs def in
       let ext_refs = Opt.map_default bai_def [] (fun def -> find_project_external_references ~project ~def) in
       {bai_def; bai_refs = int_refs @ ext_refs}
-    | Ext_ref -> (* Cursor offset is on an Ext_ref *)
+    | (Ext_ref | Open _) as ext -> (* Cursor offset is on an Ext_ref *)
       begin
         match find_external_definition ~project ~ext_ref:ident with
-          | Some (Project_def def) ->
+          | Project_def def ->
             let entry_def = try Some (Hashtbl.find table_idents def.ident_fname) with Not_found -> None in
             let int_refs = Opt.map_default entry_def [] (fun e -> Hashtbl.find_all e.int_refs def.ident_loc.loc) in
-            let ext_refs = find_project_external_references ~project ~def in
+            let ext_refs =
+              if ext = Ext_ref
+              then find_project_external_references ~project ~def
+              else find_external_references ~project ~ext_ref:ident
+            in
             {bai_def = Some def; bai_refs = int_refs @ ext_refs}
-          | Some Library_def ->
+          | Library_def ->
             let refs = find_external_references ~project ~ext_ref:ident in
             {bai_def = None; bai_refs = refs}
-          | Some (Project_file fident) ->
+          | Project_file fident ->
             let int_refs = [] in
             let ext_refs = find_external_references ~project ~ext_ref:ident in
             {bai_def = Some fident; bai_refs = int_refs @ ext_refs}
-          | None ->
+          | No_def ->
             let lib_refs = find_external_references ~project ~ext_ref:ident in
             {bai_def = None; bai_refs = lib_refs}
       end
@@ -192,16 +196,40 @@ let find_definition ~project ~filename ~offset ?compile_buffer () =
       match ident.ident_kind with
         | Def _ | Def_constr _ | Def_module _ -> Some ident
         | Int_ref def -> entry.locations.(def.loc_start.pos_cnum)
-        | Ext_ref ->
+        | Ext_ref | Open _ ->
           begin
             match find_external_definition ~project ~ext_ref:ident with
-              | Some (Project_def def) -> Some def
-              | Some (Project_file x) -> Some x
-              | Some Library_def -> None
-              | None -> None
+              | Project_def def -> Some def
+              | Project_file x -> Some x
+              | Library_def -> None
+              | No_def -> None
           end
     end;
   with Not_found -> None
+;;
+
+(** find_used_components *)
+let find_used_components ~project ~filename ~offset ?compile_buffer () =
+  scan ~project ~filename ?compile_buffer ();
+  try
+    let entry = Hashtbl.find table_idents filename in
+    let ident = entry.locations.(offset) in
+    Opt.map_default ident None begin fun ident ->
+      match ident.ident_kind with
+        | Open scope ->
+          let longid = Longident.parse ident.ident_loc.txt in
+          begin
+            match Longident.flatten longid with
+              | modname :: _ ->
+                let uses = Hashtbl.find_all entry.ext_refs modname in
+                let uses = List.filter (fun u -> scope <== u.ident_loc.loc.loc_start.pos_cnum) uses in
+                Some (ident, uses)
+              | [] -> assert false
+          end;
+        | Def _ | Def_constr _ | Def_module _ | Int_ref _ | Ext_ref -> Some (ident, [])
+    end;
+  with Not_found -> None
+;;
 
 
 
